# kingship-transcribe-v1

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  Python.txt  Swelan Auguste.txt  entrypoint.sh  main.py  requirements.txt  requirements1.txt  tasks.py
app/audio/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
app/audio/migrations/: 0001_initial.py  0002_alter_transcribeaudio_options.py  0003_transcribeaudio_name.py  0004_alter_transcribeaudio_options.py  0005_remove_transcribeaudio_status_and_more.py  0006_transcribeaudio_end_transcribeaudio_name_and_more.py  0007_alter_transcribeaudio_name.py  0008_transcribeaudio_slug.py  0009_transcribeaudio_created_by.py
app/cf/: celery.py  settings.py  urls.py
app/mediafiles/audio_files/: file1_Y8OCnwy.mp3.txt  file1_ruaxiQt.mp3.txt
app/templates/: base.html  navbar.html
app/templates/audio/: detail.html  list.html  transcribe_audio.html  transcribe_audio_success.html  transcribeaudio_detail.html  transcribeaudio_list.html
app/templates/users/: login.html  register.html  user_detail.html  user_form.html
app/templates/users/email/: user_registration_email.html
app/users/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
nginx/: nginx.conf
