[project]
name = "kingship-transcribe-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2024.10",
    "django>=5.1.2",
    "faster-whisper>=1.0.3",
    "pillow>=11.0.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "six>=1.16.0",
    "uvicorn>=0.32.0",
]
